2005-09-20  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* test/unit/ptrspec_test.cpp: gcc 2.95 fail to roll out template instantiation
	for pointers to member function, skip this test for gcc 2.95.

	* build/Makefiles/gmake/gcc.mak: gcc 2.95 has no -fcxa-at-exit option.

	* build/lib/gcc.mak: don't use LEAK_PEDANTIC with gcc 2.95 [but this not help,
	segfault at program termination still happens].
	
	* stlport/config/stl_gcc.h: gcc 2.95 has problem with llabs, so force to use
	_STLP_NO_VENDOR_STDLIB_L; 2.95 fails to initialize builtin types.

	* stlport/stl/_cmath.h: workaround for gcc 2.95---it has problem with 'using'
	directive [problem with 'abs' with float types as argument].

	* stlport/stl/type_traits.h: workaround for gcc 2.95 [parentheses around
	template argument]. Thanks Thomas Kho.

	* test/unit/fstream_test.cpp: custom facet test compilation fail for gcc 2.95

	* build/Makefiles/gmake/icc.mak, build/test/unit/icc.mak: support icc 9.0,
	thanks John Fisher-Ogden and Thomas Kho.


2005-09-19  Francois Dumont  <dums@stlport...>

	* build/Makefiles/nmake/clean.mak, lib/clean.mak, app/clean.mak: Add check
	for file or folder existance before calling del or rd to avoid error
	messages that give a bad feed back to STLport users.

	* build/Makefiles/gmake: Add support to use the GNU make tool in a Windows
	cmd console. For the moment it is used to build STLport using a simple
	MinGW distrib.

	* stlport/stl/type_traits.h: Simplified code removing the _IsConvertibleIfNot
	that has never proved of being useful, it only introduce problem with some
	limited compilers.

	* stlport/stl/_string_woraround.h, _string.h, debug/_string.h: Fix string
	range constructor bug in the VC6 specific workaround implementation that was
	resulting in a memory leak. Thanks Felix Wyss report.

2005-09-18  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stl/_hash_fun.h: add hash function for void *.
