@@ -3,7 +3,7 @@
 	* test/unit/ptrspec_test.cpp: gcc 2.95 fail to roll out template instantiation
 	for pointers to member function, skip this test for gcc 2.95.
 
-	* build/Makefiles/gmake/gcc.mak: gcc 2.95 has no -fcxa-at-exit option.
+	* build/Makefiles/gmake/gcc.mak: gcc 2.95 has no -fuse-cxa-atexit option.
 
 	* build/lib/gcc.mak: don't use LEAK_PEDANTIC with gcc 2.95 [but this not help,
 	segfault at program termination still happens].
@@ -22,6 +22,8 @@
 	* build/Makefiles/gmake/icc.mak, build/test/unit/icc.mak: support icc 9.0,
 	thanks John Fisher-Ogden and Thomas Kho.
 
+	* src/c_locale_glibc/c_locale_glibc2.c: use newlocale/freelocale for
+	glibc 2.3.x, and __newlocale/__freelocale for glibc 2.2.x. Thanks Gail Baker.
 
 2005-09-19  Francois Dumont  <dums@stlport...>
 
